--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<link rel='shortcut icon' href="/static/img/icon.ico"/>
-<title>Index</title>
-</head>
-<body>
-	<h1>Hello,{{name}}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block body %}
+	<h1>Index page</h1>
+{% endblock %}
