--- a/app/templates/error/404.html
+++ b/app/templates/error/404.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>404</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block body %}
 	<h1>Page not found.</h1>
-</body>
-</html>
+{% endblock %}
