--- a/app/templates/error/500.html
+++ b/app/templates/error/500.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>500</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block body %}
 	<h1>Internal server error.</h1>
-</body>
-</html>
+{% endblock %}
