--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link rel='shortcut icon' href="/static/img/icon.ico"/>
 <link rel='stylesheet' href="/static/css/bootstrap.min.css" />
-<title>{{title}} -- My Application</title>
+<title>{{title}} - My Application</title>
 </head>
 <body>
     {% block body %}
