--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <link rel='shortcut icon' href="/static/img/icon.ico"/>
 <link rel='stylesheet' href="/static/css/bootstrap.min.css" />
+{% block resource %}
+{% endblock %}
 <title>{{title}} - My Application</title>
 </head>
 <body>
