--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
+{% block resource %}
+<script src="/static/js/jquery-2.1.1.js"></script>
+{% endblock %}
 
 {% block body %}
-	<h1>Index page</h1>
+	<nav ></nav>
+	<a href="/login">Login</a> <a href="/signup">Signup</a>
 {% endblock %}
