--- a/app/templates/error/404.html
+++ b/app/templates/error/404.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block page_content %}
+<div class="page-header">
 	<h1>Page not found.</h1>
+</div>
 {% endblock %}
