--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,24 +18,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Flasky</a>
+            <!--will be replaced by image-->
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">Task_pro</a>
         </div>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">Home</a></li>
-            </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{current_user.username}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
+                        <li><a href="#">View Profile</a></li>
                         <li><a href="{{ url_for('user.change_password') }}">Change Password</a></li>
-                        <li><a href="{{ url_for('user.change_email_request') }}">Change Email</a></li>
                         <li><a href="{{ url_for('user.logout') }}">Log Out</a></li>
                     </ul>
                 </li>
                 {% else %}
                 <li><a href="{{ url_for('user.login') }}">Log In</a></li>
+                <li><a href="{{ url_for('user.register') }}">Sign Up</a></li>
                 {% endif %}
             </ul>
         </div>
