--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
+    <!-- base information -->
+    <p>maincontent.html</p>
 </div>
 {% endblock %}
