--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-    {% if current_user.is_authenticated %}
     <h2>Dashboard for {{current_user.username}}</h2>
     {% for v in a %}
         <li>{{v}}</li>
     {% endfor %}
-    {% endif %}
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ moment.include_moment() }}
 {% endblock %}
