--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} 
 {% block page_content %}
-<div class="page-header">
+<div class="row">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -64,4 +64,11 @@
     </div>
     <!-- /.carousel -->
 </div>
+<!--poster section-->
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        poster content here.
+    </div>
+</div>
+<!--/. poster section-->
 {% endblock %}
