--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,25 +1,30 @@
+/*GLOBAL STYLE*/
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
 body {
-  padding-bottom: 40px;
   color: #5a5a5a;
+  margin-top: 50px;
 }
-
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
+a:hover {
+  color: seagreen;
+}
+nav {
+  background-color: #CCC;
+}
+/*brand logo style*/
+.navbar-header > a > img {
+  height: 50px;
+  /*border-radius: 50% 50%;*/
+}
+/* CUSTOMIZE THE CAROUSEL */
 .carousel {
   height: 300px;
-  margin-bottom: 40px;
 }
-/* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
 }
 
-/* Declare heights because of positioning of img element */
 .carousel .item {
   height: 300px;
   background-color: #777;
@@ -30,4 +35,15 @@ body {
   left: 0;
   min-width: 100%;
   height: 300px;
+}
+
+/*FOOTER STYLE*/
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 40px;
+  background-color: #f5f5f5;
+  padding: 10px 15px;
 }
