--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 
 {% block navbar %}
 
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -20,8 +20,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <!--will be replaced by image-->
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Task_pro</a>
+            <a href="{{ url_for('main.index') }}">
+                <img src="{{ url_for('static', filename='icon.ico')}}" />
+            </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -52,13 +53,16 @@
         {{ message }}
     </div>
     {% endfor %}
-    <div class="row">
-        {% block page_content %}{% endblock %}
-    </div>
+
+    {% block page_content %}{% endblock %}
     
-    <footer>
-        Powered by <a href="http://flask.pocoo.org/" target="_blank">Flask</a> 
-    </footer>
+    <div class="row">
+        <footer class="footer">
+            <div class="container">
+                <p>Powered by <a href="http://flask.pocoo.org/" target="_blank">Flask</a></p>
+            </div>
+        </footer>
+    </div>
 </div>
 {% endblock %}
 
