--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -2,10 +2,10 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Login</h1>
-</div>
-<div class="col-md-4">
+<div class="col-md-4 col col-md-offset-4">
+    <div class="page-header">
+        <h1>Login</h1>
+    </div>
     {{ wtf.quick_form(form) }}
     <br>
     <p>Forgot your password? <a href="{{ url_for('user.password_reset_request') }}">Click here to reset it</a>.</p>
