--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
 {% block content %}
 <div class="container-fluid">
     {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
+    <div class="alert alert-warning col-md-4 col-md-offset-4">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{ message }}
     </div>
