--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -5,6 +5,7 @@
     {% for v in a %}
         <li>{{v}}</li>
     {% endfor %}
+    <a href="{{ url_for('user.newtask')}}">New Task</a>
 {% endblock %}
 
 {% block scripts %}
