--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -2,10 +2,10 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Register</h1>
-</div>
-<div class="col-md-4">
+<div class="col-md-4 col col-md-offset-4">
+    <div class="page-header">
+        <h1>Register</h1>
+    </div>
     {{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
