--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -66,8 +66,13 @@
 </div>
 <!--poster section-->
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-        poster content here.
+    <div class="col-md-4 col-xs-6 col-lg-4 col-md-offset-2">
+        <img src=""/>
+        <p>Some content here.</p>
+    </div>
+    <div class="col-md-4 col-xs-6 col-lg-4">
+        <img src=""/>
+        <p>Some other content here.</p>
     </div>
 </div>
 <!--/. poster section-->
