--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -20,6 +20,7 @@ nav {
 /* CUSTOMIZE THE CAROUSEL */
 .carousel {
   height: 300px;
+  margin-bottom: 10px; 
 }
 .carousel-caption {
   z-index: 10;
