--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,12 +2,12 @@
 {% block page_content %}
 <div class="row">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
+        <!-- Indicators 
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
+        </ol>-->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
@@ -64,6 +64,11 @@
     </div>
     <!-- /.carousel -->
 </div>
+<div class="row">
+    <div class="newsbar">
+        Want to help improve this tool? - <a href="https://github.com/TobeDeveloper/Task_pro" target="_blank">I'm searching for contributors</a>
+    </div>
+</div>
 <!--poster section-->
 <div class="row">
     <div class="col-md-4 col-xs-6 col-lg-4 col-md-offset-2">
@@ -71,7 +76,7 @@
         <p>Some content here.</p>
     </div>
     <div class="col-md-4 col-xs-6 col-lg-4">
-        <img src=""/>
+        <img src="" class/>
         <p>Some other content here.</p>
     </div>
 </div>
