--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 
 {% block navbar %}
 
-<nav class="navbar navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -20,8 +20,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="{{ url_for('main.index') }}">
-                <img src="{{ url_for('static', filename='icon.ico')}}" />
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">
+                <img src="{{ url_for('static', filename='icon.ico')}}">
+                Task_pro
             </a>
         </div>
         <div class="navbar-collapse collapse">
