--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
         </ol>-->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+                <img src="{{url_for('static',filename='img/slider1.jpg')}}" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Example headline.</h1>
@@ -19,38 +19,26 @@
                             <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might
                             not load/display properly due to web browser security rules.
                         </p>
-                        <p>
-                            <a class="btn btn-lg btn-primary" href="#" role="button">Sign
-							up today</a>
-                        </p>
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+                <img src="{{url_for('static',filename='img/slider2.png')}}" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Another example headline.</h1>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at
                             eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p>
-                            <a class="btn btn-lg btn-primary" href="#" role="button">Learn
-							more</a>
-                        </p>
                     </div>
                 </div>
             </div>
             <div class="item">
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+                <img src="{{url_for('static',filename='img/slider3.png')}}" alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>One more for good measure.</h1>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at
                             eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                        <p>
-                            <a class="btn btn-lg btn-primary" href="#" role="button">Browse
-							gallery</a>
-                        </p>
                     </div>
                 </div>
             </div>
@@ -63,6 +51,13 @@
         </a>
     </div>
     <!-- /.carousel -->
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning" style="margin-bottom:0px; ">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
+
 </div>
 <div class="row">
     <div class="newsbar">
@@ -72,13 +67,21 @@
 <!--poster section-->
 <div class="row">
     <div class="col-md-4 col-xs-6 col-lg-4 col-md-offset-2">
-        <img src=""/>
+        <img src="..." alt="..." class="img-thumbnail">
         <p>Some content here.</p>
     </div>
     <div class="col-md-4 col-xs-6 col-lg-4">
-        <img src="" class/>
+        <img src="..." class="img-thumbnail"/>
         <p>Some other content here.</p>
     </div>
 </div>
+<div class="row">
+    <footer class="footer">
+        <div class="container">
+            <p>Powered by <a href="http://flask.pocoo.org/" target="_blank">Flask</a></p>
+        </div>
+    </footer>
+</div>
+
 <!--/. poster section-->
 {% endblock %}
