--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -67,11 +67,13 @@
 <!--poster section-->
 <div class="row">
     <div class="col-md-4 col-xs-6 col-lg-4 col-md-offset-2">
-        <img src="..." alt="..." class="img-thumbnail">
-        <p>Some content here.</p>
+        <p>
+            <img src="{{url_for('static',filename='img/poster1.png')}}" alt="Poster" class="img-thumbnail poster-img">
+            Some content here.
+        </p>
     </div>
     <div class="col-md-4 col-xs-6 col-lg-4">
-        <img src="..." class="img-thumbnail"/>
+        <img src="{{url_for('static',filename='img/poster1.png')}}" alt="Poster" class="img-thumbnail poster-img"/>
         <p>Some other content here.</p>
     </div>
 </div>
