--- a/app/templates/user/register.html
+++ b/app/templates/user/register.html
@@ -6,6 +6,12 @@
     <div class="page-header">
         <h1>Register</h1>
     </div>
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning" style="margin-bottom:0px; ">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
     {{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
