--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ url_for('main.index') }}">
-                <img src="{{ url_for('static', filename='icon.ico')}}" class="img-circle">
+                <img src="{{ url_for('static', filename='img/icon.png')}}" class="img-circle">
                 Task_pro
             </a>
         </div>
