--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,9 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
+
+{% block head %}
+{{super()}}
+<link rel="stylesheet" href="{{url_for('static',filename='css/font-awesome.min.css')}}"
+{% endblock %}
 {% block page_content %}
 <div class="row">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -13,7 +18,7 @@
                 <img src="{{url_for('static',filename='img/slider1.jpg')}}" alt="First slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>Example headline.</h1>
+                        <h1>Collect todos</h1>
                         <p>
                             Note: If you're viewing this page via a
                             <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might
@@ -26,7 +31,7 @@
                 <img src="{{url_for('static',filename='img/slider2.png')}}" alt="Second slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>Another example headline.</h1>
+                        <h1>Build your own schedule</h1>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at
                             eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     </div>
@@ -36,7 +41,7 @@
                 <img src="{{url_for('static',filename='img/slider3.png')}}" alt="Third slide">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>One more for good measure.</h1>
+                        <h1>Getting thing done</h1>
                         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at
                             eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                     </div>
@@ -67,17 +72,32 @@
         </p>
     </div>
     <div class="col-md-4 col-xs-6 col-lg-4">
-        <img src="{{url_for('static',filename='img/poster1.png')}}" alt="Poster" class="img-thumbnail poster-img"/>
-        <p>Some other content here.</p>
+        <p>
+            <img src="{{url_for('static',filename='img/poster2.png')}}" alt="Poster" class="img-thumbnail poster-img"/>
+            Some other content here.
+        </p>
+    </div>
+</div>
+<!--/. poster section-->
+<!--Feature section-->
+<div class="row feature-section">
+    <div class="col-md-8 col-xs-8 col-lg-8 col-md-offset-2">
+        <hr>
+        <h1><i class="fa fa-github"></i>&nbsp;&nbsp;Open Source</h1>
+        <p>Everything on <b><a href="https://github.com" target="_blank">Github</a></b>. Anyone can make changes to the source code and adjust to your own version.</p>
+        <h1><i class="fa fa-user-circle-o"></i>&nbsp;&nbsp;Personal Data</h1>
+        <p></p>
     </div>
 </div>
 <div class="row">
     <footer class="footer">
         <div class="container">
-            <p>Powered by <a href="http://flask.pocoo.org/" target="_blank">Flask</a></p>
+            <p>Powered by <a href="http://flask.pocoo.org/" target="_blank">Flask</a>&nbsp;
+                & <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>
+                <span class="pull-right">&copy;Author Michael Yan(2017)</span>
+            </p>
         </div>
     </footer>
 </div>
 
-<!--/. poster section-->
 {% endblock %}
