--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -24,9 +24,13 @@ body {
 }
 .carousel-caption {
   z-index: 10;
+  position: absolute;
+  top:90px;
   vertical-align: center;
 }
-
+.carousel-caption > h1{
+  font-size: 48px;
+}
 .carousel .item {
   height: 300px;
   background-color: #777;
