--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -77,6 +77,7 @@
         <h1><i class="fa fa-github"></i>&nbsp;&nbsp;Open Source</h1>
         <p>Everything on <b><a href="https://github.com" target="_blank">Github</a></b>. Anyone can make changes to the source code and adjust to your own version.</p>
         <h1><i class="fa fa-user-circle-o"></i>&nbsp;&nbsp;Personal Data</h1>
+        <p>Customize your personal statistics, track your schedule timely.</p>
         <p></p>
     </div>
 </div>
