--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -6,7 +6,7 @@
     <p>
         
     </p>
-    {% for v in a %}
+    {% for v in tasks %}
         <li>{{v}}</li>
     {% endfor %}
     <a href="{{ url_for('user.newtask')}}">New Task</a>
