--- a/app/templates/user/dashboard.html
+++ b/app/templates/user/dashboard.html
@@ -19,7 +19,7 @@
             </tr>
             {% for v in tasks %}
             <tr>
-                <td>{{v.typename}}</td>
+                <td>Missed column</td>
                 <td>{{v.taskname}}</td>
                 <td>{{v.status}}</td>
                 <td>{{v.due_date}}</td>
