--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
 <link rel="shortcut icon" href="{{ url_for('static', filename='icon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='icon.ico') }}" type="image/x-icon">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+<link rel="stylesheet" href="{{url_for('static',filename='css/font-awesome.min.css')}}"
 {% endblock %}
 
 {% block navbar %}
@@ -31,11 +32,11 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{current_user.username}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('user.dashboard') }}">My Dashboard</a></li>
-                        <li><a href="{{ url_for('user.surroundings')}}">Surroundings</a></li>
-                        <li><a href="{{ url_for('user.profile') }}">View Profile</a></li>
-                        <li><a href="{{ url_for('user.change_password') }}">Change Password</a></li>
-                        <li><a href="{{ url_for('user.logout') }}">Log Out</a></li>
+                        <li><a href="{{ url_for('user.dashboard') }}"><span class="fa fa-user"></span>My Dashboard</a></li>
+                        <li><a href="{{ url_for('user.surroundings')}}"><span class="fa fa-user"></span>Surroundings</a></li>
+                        <li><a href="{{ url_for('user.profile') }}"><span class="fa fa-user"></span>View Profile</a></li>
+                        <li><a href="{{ url_for('user.change_password') }}"><span class="fa fa-user"></span>Change Password</a></li>
+                        <li><a href="{{ url_for('user.logout') }}"><span class="fa fa-user"></span>Log Out</a></li>
                     </ul>
                 </li>
                 {% else %}
